complete fetch nb

--- a/notebooks/01_data_fetch.ipynb
+++ b/notebooks/01_data_fetch.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ca8ea47d-5d0c-4e71-bdd8-fda0443aaf8d",
    "metadata": {
     "tags": []
@@ -75,7 +75,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing folders:  47%|████▋     | 63/135 [14:50<31:18, 26.09s/it]"
+      "Processing folders: 100%|██████████| 135/135 [39:07<00:00, 17.39s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total files downloaded: 4805\n",
+      "Time taken: 2387.03 seconds\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
